force-app/zurich-base/main/default/objects/CampaignMember/CampaignMember.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>