force-app/zurich-base/main/default/objects/CampaignMember/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>Obtener el AccountId del contacto necesario para flows</description>
    <formula>Contact.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountId</label>
    <type>Text</type>
</CustomField>