force-app/zurich-base/main/default/objects/CampaignMember/fields/CallRetries__c.field-meta.xml
<CustomField>
    <fullName>CallRetries__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Call Retries</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>