force-app/zurich-base/main/default/objects/CampaignMember/fields/EmailOptOutContact__c.field-meta.xml
<CustomField>
    <fullName>EmailOptOutContact__c</fullName>
    <formula>Contact.HasOptedOutOfEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Opt Out (Contact)</label>
    <type>Checkbox</type>
</CustomField>