force-app/zurich-base/main/default/objects/CampaignMember/fields/IsParentAnonymized__c.field-meta.xml
<CustomField>
    <fullName>IsParentAnonymized__c</fullName>
    <formula>OR( Account.Anonymized__c, Contact.Anonymized__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsParentAnonymized</label>
    <type>Checkbox</type>
</CustomField>