force-app/zurich-base/main/default/objects/CampaignMember/fields/LeadPhone__c.field-meta.xml
<CustomField>
    <fullName>LeadPhone__c</fullName>
    <description>ZE - Campañas telemarketing. Phone es read-only y se necesita un campo editable desde el Flow</description>
    <label>Lead Phone</label>
    <type>Phone</type>
</CustomField>