force-app/zurich-base/main/default/objects/CampaignMember/fields/OfferAssignedCode__c.field-meta.xml
<CustomField>
    <fullName>OfferAssignedCode__c</fullName>
    <description>Código del mediador asignado a la oferta.</description>
    <label>Mediator Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>