force-app/zurich-base/main/default/objects/CampaignMember/fields/OfferAssignedType__c.field-meta.xml
<CustomField>
    <fullName>OfferAssignedType__c</fullName>
    <description>Tipo de mediador asignado a la oferta.</description>
    <label>Offer Assigned Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
                <label>Mediador</label>
            </value>
            <value>
                <fullName>CC</fullName>
                <label>Contact Center</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>