force-app/zurich-base/main/default/objects/CampaignMember/fields/Origen_BBDD__c.field-meta.xml
<CustomField>
    <fullName>Origen_BBDD__c</fullName>
    <label>Origen BBDD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>