force-app/zurich-base/main/default/objects/CampaignMember/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <formula>TEXT(Campaign.Scope__c)</formula>
    <label>Scope</label>
    <type>Text</type>
</CustomField>