force-app/zurich-base/main/default/objects/CampaignMember/fields/ScopeId__c.field-meta.xml
<CustomField>
    <fullName>ScopeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scope Name</label>
    <referenceTo>Scope__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>